--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "body-parser": "^1.18.2",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
+    "jsonwebtoken": "^8.1.1",
     "mongoose": "^4.13.9"
   },
   "devDependencies": {
